@@ -3,7 +3,9 @@
 
 <epp:phrases xmlns="http://www.w3.org/1999/xhtml" xmlns:epp="http://eprints.org/ep3/phrase" xmlns:epc="http://eprints.org/ep3/control">
 
-    <epp:phrase id="dynamic:logged_in">Logged in as <epc:pin name="user"/> | <a href="{$config{perl_url}}/logout">Logout</a> | <epc:pin name="tools" /></epp:phrase>
+    <epp:phrase id="dynamic:logged_in">Logged in as <epc:pin name="user"/> | 
+       <epc:pin name="tools" /> | <a href="{$config{perl_url}}/logout">Logout</a> 
+    </epp:phrase>
 
     <epp:phrase id="dynamic:not_logged_in"><a href="{$config{userhome}}">Login</a> | <a href="{$config{perl_url}}/register">Create Account</a></epp:phrase>
 
